; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_copy.c_test_core_copy__file.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_copy.c_test_core_copy__file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64, i32 }

@.str = private unnamed_addr constant [28 x i8] c"This is some stuff to copy\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"copy_me\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"copy_me_two\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_copy__file() #0 {
  %1 = alloca %struct.stat, align 8
  %2 = alloca i8*, align 8
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %3)
  %5 = call i32 @git_futils_cp(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 436)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = call i32 @git_path_lstat(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), %struct.stat* %1)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = getelementptr inbounds %struct.stat, %struct.stat* %1, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @S_ISREG(i32 %10)
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i8*, i8** %2, align 8
  %14 = call i64 @strlen(i8* %13)
  %15 = getelementptr inbounds %struct.stat, %struct.stat* %1, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %14, %16
  %18 = zext i1 %17 to i32
  %19 = call i32 @cl_assert(i32 %18)
  %20 = call i32 @p_unlink(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = call i32 @p_unlink(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32 @cl_git_pass(i32 %22)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_futils_cp(i8*, i8*, i32) #1

declare dso_local i32 @git_path_lstat(i8*, %struct.stat*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @S_ISREG(i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
